dark mode solved

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -85,22 +85,22 @@ http://ionicframework.com/docs/theming/ */
   body {
     --ion-color-primary: #428cff;
     --ion-color-primary-rgb: 66, 140, 255;
-    --ion-color-primary-contrast: #ffffff;
+    /* --ion-color-primary-contrast: #ffffff; */
     --ion-color-primary-contrast-rgb: 255, 255, 255;
     --ion-color-primary-shade: #3a7be0;
     --ion-color-primary-tint: #5598ff;
 
     --ion-color-secondary: #50c8ff;
     --ion-color-secondary-rgb: 80, 200, 255;
-    --ion-color-secondary-contrast: #ffffff;
-    --ion-color-secondary-contrast-rgb: 255, 255, 255;
+    /* --ion-color-secondary-contrast: #ffffff; */
+    /* --ion-color-secondary-contrast-rgb: 255, 255, 255; */
     --ion-color-secondary-shade: #46b0e0;
     --ion-color-secondary-tint: #62ceff;
 
     --ion-color-tertiary: #6a64ff;
     --ion-color-tertiary-rgb: 106, 100, 255;
-    --ion-color-tertiary-contrast: #ffffff;
-    --ion-color-tertiary-contrast-rgb: 255, 255, 255;
+    /* --ion-color-tertiary-contrast: #ffffff; */
+    /* --ion-color-tertiary-contrast-rgb: 255, 255, 255; */
     --ion-color-tertiary-shade: #5d58e0;
     --ion-color-tertiary-tint: #7974ff;
 
@@ -121,7 +121,7 @@ http://ionicframework.com/docs/theming/ */
     --ion-color-danger: #ff4961;
     --ion-color-danger-rgb: 255, 73, 97;
     --ion-color-danger-contrast: #ffffff;
-    --ion-color-danger-contrast-rgb: 255, 255, 255;
+    /* --ion-color-danger-contrast-rgb: 255, 255, 255; */
     --ion-color-danger-shade: #e04055;
     --ion-color-danger-tint: #ff5b71;
 
@@ -134,17 +134,17 @@ http://ionicframework.com/docs/theming/ */
 
     --ion-color-medium: #989aa2;
     --ion-color-medium-rgb: 152, 154, 162;
-    --ion-color-medium-contrast: #000000;
+    /* --ion-color-medium-contrast: #000000; */
     --ion-color-medium-contrast-rgb: 0, 0, 0;
     --ion-color-medium-shade: #86888f;
     --ion-color-medium-tint: #a2a4ab;
 
-    --ion-color-light: #222428;
+    /* --ion-color-light: #222428;
     --ion-color-light-rgb: 34, 36, 40;
     --ion-color-light-contrast: #ffffff;
     --ion-color-light-contrast-rgb: 255, 255, 255;
     --ion-color-light-shade: #1e2023;
-    --ion-color-light-tint: #383a3e;
+    --ion-color-light-tint: #383a3e; */
   }
 
   /*
@@ -153,11 +153,9 @@ http://ionicframework.com/docs/theming/ */
    */
 
   .ios body {
-    --ion-background-color: #000000;
     --ion-background-color-rgb: 0, 0, 0;
 
-    --ion-text-color: #ffffff;
-    --ion-text-color-rgb: 255, 255, 255;
+    /* --ion-text-color-rgb: 255, 255, 255; */
 
     --ion-color-step-50: #0d0d0d;
     --ion-color-step-100: #1a1a1a;
@@ -181,8 +179,6 @@ http://ionicframework.com/docs/theming/ */
 
     --ion-toolbar-background: #0d0d0d;
 
-    --ion-item-background: #000000;
-
     --ion-card-background: #1c1c1d;
   }
 
@@ -192,10 +188,8 @@ http://ionicframework.com/docs/theming/ */
    */
 
   .md body {
-    --ion-background-color: #121212;
     --ion-background-color-rgb: 18, 18, 18;
 
-    --ion-text-color: #ffffff;
     --ion-text-color-rgb: 255, 255, 255;
 
     --ion-border-color: #222222;
